# Glaze

./: CMakeLists.txt  README.md  build.bat  vcpkg.json
src/: CMakeLists.txt  main.cpp
src/private/: main.h
src/public/: main.cpp
